--- a/package.json
+++ b/package.json
@@ -7,5 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "i18next": "^11.4.0",
+    "yup": "^0.26.0"
+  }
 }
