--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "i18next": "^11.4.0",
     "joi": "^13.4.0",
     "validate": "^4.4.1",
+    "validate.js": "^0.12.0",
     "yup": "^0.26.0"
   }
 }
