--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "validation",
   "version": "1.0.0",
   "description": "testing",
-  "main": "app.js",
+  "main": "bin/validation",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
