--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "ajv-errors": "^1.0.0",
     "i18next": "^11.4.0",
     "joi": "^13.4.0",
+    "koa": "^2.5.2",
+    "koa-body": "^4.0.4",
+    "koa-logger": "^3.2.0",
+    "koa-router": "^7.4.0",
     "validate": "^4.4.1",
     "validate.js": "^0.12.0",
     "yup": "^0.26.0"
