--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "ajv": "^6.5.2",
     "ajv-errors": "^1.0.0",
+    "doctrine": "^2.1.0",
     "i18next": "^11.4.0",
     "joi": "^13.4.0",
     "koa": "^2.5.2",
@@ -22,6 +23,8 @@
     "yup": "^0.26.0"
   },
   "devDependencies": {
-    "doca": "^0.4.0"
+    "chai": "^4.1.2",
+    "doca": "^0.4.0",
+    "mocha": "^5.2.0"
   }
 }
